# sorterpy

./: .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.cursor/rules/: sorter.mdc
.github/: ISSUE_TEMPLATE.md
.github/workflows/: release_package.yml  run_tests.yml  simple_release.yml
docs/: Makefile  advanced.md  api.md  changelog.md  conf.py  configuration.md  contributing.md  example_walkthrough.md  index.md  index.rst  installation.md  installation.rst  make.bat  quickstart.md  usage.rst
examples/: alphabet_usage_example.py  basic_usage.py  test_sorter.py
src/sorterpy/: __init__.py  cli.py  sorterpy.py
tests/: __init__.py  conftest.py  test_attribute.py  test_errors.py  test_item.py  test_sorterpy.py  test_tag.py  test_voting.py
