[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sorterpy"
version = "0.2.2"
description = "the official Python SDK for sorter.social's seamless data labeling solutions for any AI/ML workflow."
readme = "README.rst"
authors = [
  {name = "Jason McElhenney", email = "jason@sorter.social"}
]
maintainers = [
  {name = "Jason McElhenney", email = "jason@sorter.social"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "httpx",
  "loguru"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/sorterisntonline/sorterpy/issues"
changelog = "https://github.com/sorterisntonline/sorterpy/blob/master/changelog.md"
homepage = "https://github.com/sorterisntonline/sorterpy"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.sorterpy]
compatible_api_versions = ["2","2.1","2.1.1"]

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

# [[tool.mypy.overrides]]
# # Don't require test functions to include types
# module = "tests.*"
# allow_untyped_defs = true
# disable_error_code = "attr-defined"

