[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sorterpy"
version = "0.2.15"
description = "the official Python SDK for sorter.social's seamless data labeling solutions for any AI/ML workflow."
readme = "README.md"
authors = [
  {name = "Jason McElhenney", email = "jason@sorter.social"}
]
maintainers = [
  {name = "Jason McElhenney", email = "jason@sorter.social"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "httpx",
  "loguru",
  "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "coverage",      # Test coverage reporting
    "mypy",         # Type checking
    "pytest",       # Testing framework
    "pytest-mock",  # Mocking for pytest
    "pytest-cov",   # Coverage reporting integration
    "responses",    # HTTP mocking
    "ruff"         # Linting
]

[project.urls]
bugs = "https://github.com/sorterisntonline/sorterpy/issues"
changelog = "https://github.com/sorterisntonline/sorterpy/blob/master/changelog.md"
homepage = "https://github.com/sorterisntonline/sorterpy"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.sorterpy]
compatible_api_versions = ["2","2.1","2.1.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=sorterpy --cov-report=term-missing"

[tool.mypy]
files = "."
strict = true
warn_unreachable = true
warn_no_return = true